tests/analyzer/errors/ternary.ray
fn main() {
    print 1 ? "oui" : "non"
}
